fix: min-height of sso login editor

--- a/src/Pages/GlobalConfigurations/Authorization/SSOLoginServices/ssoLogin.scss
+++ b/src/Pages/GlobalConfigurations/Authorization/SSOLoginServices/ssoLogin.scss
@@ -25,4 +25,10 @@
         font-size: 14px;
         font-family: Consolas, "Courier New", monospace;
     }
+
+    & .code-editor__height {
+        & .react-monaco-editor-container {
+            min-height: 250px;
+        }
+    }
 }
