--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1179,6 +1179,7 @@ button.anchor {
         outline: unset;
         border: unset;
         padding: 4px;
+
         &:first-child {
             border-bottom: 1px solid var(--N900);
         }
@@ -2899,6 +2900,14 @@ textarea,
     }
 }
 
+.icon-stroke-n7 {
+
+    path,
+    rect {
+        stroke: var(--N700);
+    }
+}
+
 .icon-fill-blue-imp path {
     fill: var(--B500) !important;
 }
@@ -3160,6 +3169,7 @@ textarea,
 .w-126 {
     width: 126px;
 }
+
 .w-130 {
     width: 130px;
 }
@@ -3763,6 +3773,7 @@ textarea,
 .lh-18-imp {
     line-height: 18px !important;
 }
+
 .lh-20 {
     line-height: 20px;
 }
@@ -4833,7 +4844,7 @@ textarea::placeholder {
 }
 
 .dc__fill-available-space {
-    > * {
+    >* {
         width: 100%;
         height: 100%;
     }
