refactor: EnvrionmentOverviewTable - css update, add tippy to name, deployedBy

--- a/src/Pages/Shared/EnvironmentOverviewTable/EnvironmentOverviewTable.scss
+++ b/src/Pages/Shared/EnvironmentOverviewTable/EnvironmentOverviewTable.scss
@@ -6,6 +6,7 @@
     &__row {
         display: grid;
         grid-template-columns: 300px 1fr;
+        min-width: fit-content;
 
         &:hover:not(.no-hover) {
             background-color: var(--N50);
@@ -35,6 +36,7 @@
         display: grid;
         grid-template-columns: 150px 200px 110px 120px minmax(200px, 1fr);
         column-gap: 16px;
+        align-items: center;
         transition: grid-template-columns 0.2s ease-in-out;
 
         &--last-deployed-expanded {
