feat: replace plugin version select with select picker

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2414,6 +2414,10 @@ button.anchor {
     max-width: 250px;
 }
 
+.dc__mxw-280 {
+    max-width: 280px;
+}
+
 .dc__mxw-300 {
     max-width: 300px;
 }
