--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2474,6 +2474,10 @@ button.anchor {
     max-width: 180px;
 }
 
+.dc__mxw-150 {
+    max-width: 155px;
+}
+
 .dc__mxw-155 {
     max-width: 155px;
 }
