fix: update the styling for outline

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4752,8 +4752,8 @@ textarea::placeholder {
     outline: none;
 
     &:focus-visible {
-        outline: 5px auto -webkit-focus-ring-color !important;
-        outline-offset: 1px;
+        outline: 2px solid var(--B500) !important;
+        outline-offset: 2px;
     }
 }
 
