feat: replace with rjsf form in chart values gui view

--- a/src/components/v2/values/chartValuesDiff/ChartValuesView.scss
+++ b/src/components/v2/values/chartValuesDiff/ChartValuesView.scss
@@ -291,9 +291,16 @@
         }
 
         .chart-values-view__gui-form-container {
+            // FIXME: height?
+            // FIXME: when readme is open the whole container scrolls as well
             height: calc(100vh - 162px);
             border-bottom: 1px solid var(--N100);
             overflow: scroll;
+            padding: 0 20px;
+
+            & .rjsf-form-template__container {
+                width: 800px;
+            }
 
             &.values-update-view {
                 height: calc(100vh - 192px);
@@ -302,39 +309,6 @@
             &.chart-values-view__full-mode {
                 height: calc(100vh - 130px);
                 border-bottom: none;
-            }
-
-            .gui-form-info {
-                position: absolute;
-                z-index: 1;
-                width: calc(100% - 301px);
-                padding: 6px 12px;
-                border-radius: 0;
-                border-bottom: 1px solid var(--B200);
-            }
-
-            .chart-values-view__gui-form {
-                width: 100%;
-                max-width: 800px;
-                min-width: 600px;
-                padding: 52px 20px 20px;
-
-                label {
-                    margin-bottom: 16px;
-                    min-width: 600px;
-
-                    .slider-input-box-container .slider-input {
-                        width: 100%;
-                    }
-                }
-
-                .styled-form-box {
-                    min-width: 600px;
-
-                    label {
-                        min-width: 568px;
-                    }
-                }
             }
         }
 
