feat: memoize app list filter options

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -4974,7 +4974,7 @@ textarea::placeholder {
     }
 }
 
-.pulsating-dot {
+.dc__pulsating-dot {
     width: 10px;
     height: 10px;
     border: solid 4px rgba(255, 126, 91, 0.4);
