feat: add kube config button to cluster selection list

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2946,7 +2946,7 @@ textarea,
 }
 
 .dc__ff-monospace {
-    font-family: monospace;
+    font-family: 'Source Code Pro', monospace;
 }
 
 @mixin tab-container($bgColor, $color) {
