--- a/src/components/v2/values/chartValuesDiff/ChartValuesView.scss
+++ b/src/components/v2/values/chartValuesDiff/ChartValuesView.scss
@@ -17,56 +17,17 @@
 @import './ChartValuesViewUtils.scss';
 
 .chart-values-view__container {
-    position: relative;
-    min-width: 920px;
-    height: calc(100vh - 77px);
-
-    &.chart-values-view__deploy-chart {
-        height: calc(100vh - 48px);
-
-        .chart-values-view__vr-divider {
-            height: calc(100vh - 98px);
-        }
-
-        .chart-values-view__wrapper {
-            .chart-values-view__readme {
-                .chart-values-view__readme-markdown {
-                    height: calc(100vh - 130px);
-                }
-            }
-
-            .chart-values-view__editor {
-                &.chart-values-view__full-mode {
-                    .code-editor-container {
-                        height: auto;
-                        .react-monaco-editor-container,
-                        .details-loader-height {
-                            height: calc(100vh - 130px) !important;
-                        }
-                        @include sub-vh;
-                    }
-                }
-
-                .code-editor-container {
-                    height: auto;
-                    .react-monaco-editor-container,
-                    .details-loader-height {
-                        height: calc(100vh - 162px) !important;
-                    }
-                    @include sub-vh;
-                }
-            }
-        }
+    & .react-monaco-editor-container {
+        flex-grow: 1;
     }
 
     &.readmeOpened {
         .chart-values-view__wrapper {
-            grid-template-columns: 49.95% 0.1% 49.95%;
+            grid-template-columns: 50% 50%;
 
             .chart-values-view__details {
                 display: none;
             }
-            @include chart-values-view-sub-vh;
         }
     }
 
@@ -77,7 +38,6 @@
             .chart-values-view__details {
                 display: none;
             }
-            @include chart-values-view-sub-vh;
         }
     }
 
@@ -112,7 +72,7 @@
 
     .chart-values-view__wrapper {
         display: grid;
-        grid-template-columns: 300px 1px calc(100% - 301px);
+        grid-template-columns: 300px 1fr;
         transition: all 0.2s ease-out;
 
         .compare-values-select__group,
@@ -135,8 +95,7 @@
         }
 
         .chart-values-view__details {
-            padding: 16px 16px 12px;
-            height: calc(100vh - 189px);
+            padding: 16px;
             overflow: scroll;
 
             .chart-values__project-container .chart-values__project-label,
@@ -283,17 +242,9 @@
                 padding: 0 12px;
                 border-bottom: none;
             }
-
-            .chart-values-view__readme-markdown {
-                height: calc(100vh - 162px);
-                overflow: scroll;
-            }
         }
 
         .chart-values-view__gui-form-container {
-            // FIXME: height?
-            // FIXME: when readme is open the whole container scrolls as well
-            height: calc(100vh - 162px);
             border-bottom: 1px solid var(--N100);
             overflow: scroll;
             padding: 0 20px;
@@ -301,62 +252,28 @@
             & .rjsf-form-template__container {
                 width: 800px;
             }
-
-            &.values-update-view {
-                height: calc(100vh - 192px);
-            }
-
-            &.chart-values-view__full-mode {
-                height: calc(100vh - 130px);
-                border-bottom: none;
-            }
-        }
-
-        .empty-state {
-            height: calc(100vh - 162px) !important;
-            border-bottom: 1px solid var(--N100);
-
-            .subtitle {
-                overflow-wrap: break-word;
-            }
-
-            svg {
-                width: 20px;
-                height: 20px;
-                max-height: none;
-            }
         }
 
         .chart-values-view__editor {
-            &.chart-values-view__full-mode {
-                .code-editor-container {
-                    height: auto;
-                    .react-monaco-editor-container,
-                    .details-loader-height {
-                        height: calc(100vh - 162px) !important;
-                    }
-                    @include sub-vh;
-                }
-                .code-editor-container.manifest-view {
-                    height: auto;
-                    .react-monaco-editor-container,
-                    .details-loader-height {
-                        height: calc(100vh - 192px) !important;
-                    }
-                    @include sub-vh;
+            display: flex;
+            flex-direction: column;
+
+            & .empty-state {
+                .subtitle {
+                    overflow-wrap: break-word;
                 }
 
-                .empty-state {
-                    height: calc(100vh - 130px) !important;
-                    border-bottom: none;
+                & > svg {
+                    width: 20px !important;
+                    height: 20px !important;
+                    max-height: none;
                 }
-            }
-
-            .details-loader {
-                width: 100%;
             }
 
             .code-editor-container {
+                display: flex;
+                flex-direction: column;
+                flex-grow: 1;
                 border: none;
                 border-bottom: 1px solid var(--N100);
                 height: auto;
@@ -392,13 +309,13 @@
                     }
                 }
 
-                .react-monaco-editor-container,
-                .details-loader-height {
-                    // margin-top: 6px;
-                    min-height: 345px;
-                    height: calc(100vh - 196px) !important;
+                & .details-loader-height {
+                    height: 100%;
                 }
-                @include sub-vh;
+
+                & .details-loader {
+                    width: 100%;
+                }
             }
         }
 
@@ -417,11 +334,6 @@
     .chart-values-view__hr-divider {
         width: 100%;
         height: 1px;
-    }
-
-    .chart-values-view__vr-divider {
-        width: 1px;
-        height: calc(100vh - 125px);
     }
 }
 
