--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -2598,6 +2598,10 @@ button.anchor {
     border-top-right-radius: 3px;
 }
 
+.dc__top-right-radius-4 {
+    border-top-right-radius: 4px;
+}
+
 .dc__bottom-radius-4 {
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -3321,6 +3325,10 @@ textarea,
 // Width in percentage
 .mw-100p {
     min-width: 100%;
+}
+
+.w-20 {
+    width: 20%;
 }
 
 .w-25 {
