chore: common out custom scss for react toastify

--- a/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/nodeDetailTab.scss
+++ b/src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/nodeDetailTab.scss
@@ -189,11 +189,11 @@
     }
 }
 
-.devtron-toast.unauthorized {
-    &:before {
-        background-image: url('../../../../assets/icons/ic-locked.svg');
-    }
-}
+// .devtron-toast.unauthorized {
+//     &:before {
+//         background-image: url('../../../../assets/icons/ic-locked.svg');
+//     }
+// }
 
 .manifest-tabs-row {
     height: 32px;
