fix: use max-width 800px for rjsf form in chart values gui view

--- a/src/components/v2/values/chartValuesDiff/ChartValuesView.scss
+++ b/src/components/v2/values/chartValuesDiff/ChartValuesView.scss
@@ -249,7 +249,8 @@
             overflow: scroll;
 
             & .rjsf-form-template__container {
-                width: 800px;
+                max-width: 800px;
+                min-width: 400px;
             }
         }
 
